src/objects/FinServ__ReciprocalRole__c.object
<CustomObject>
    <description>Represents the other entity’s corresponding role in a one-to-one relationship between entities.</description>
    <fields>
        <fullName>FinServ__CreateInverseRole__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, a new inverse role is created for the role.</description>
        <inlineHelpText>If checked, a corresponding inverse role is automatically created.</inlineHelpText>
        <label>Create Inverse Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__InverseRelationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Uniquely identifies the relationship between Role and InverseRole__c so that it can be referenced by a trigger that creates the inverse relationship record.</description>
        <label>InverseRelationship</label>
        <referenceTo>FinServ__ReciprocalRole__c</referenceTo>
        <relationshipLabel>Inverse Relationship</relationshipLabel>
        <relationshipName>InverseRelationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__InverseRole__c</fullName>
        <label>Inverse Role</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__RelationshipType__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Contact Contact Relation</fullName>
                </value>
                <value>
                    <fullName>Account Account Relation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Reciprocal Role</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <columns>NAME</columns>
        <columns>FinServ__InverseRole__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reciprocal Roles</pluralLabel>
    <recordTypes>
        <fullName>FinServ__AccountRole</fullName>
        <active>true</active>
        <description>Roles associated with Account-Account Relationships</description>
        <label>Account Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__ContactRole</fullName>
        <active>true</active>
        <description>Roles associated with Contact-Contact Relationships</description>
        <label>Contact Role</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FinServ__ProhibitUpdates</fullName>
        <active>true</active>
        <description>Enforces that updates to reciprocal roles are prohibited</description>
        <errorConditionFormula>ISCHANGED( FinServ__CreateInverseRole__c) ||
            ISCHANGED(Name) || ISCHANGED( FinServ__InverseRole__c ) || ISCHANGED(RecordTypeId)</errorConditionFormula>
        <errorMessage>Reciprocal Role cannot be modified</errorMessage>
    </validationRules>
</CustomObject>